# effigia

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  readme.txt
cmake/: FindwiringPi.cmake
include/: DisplayModule.h  Event.h
src/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h  ImageData.c  ImageData.h  display.rs  imgproc.rs  main.cpp  main.rs  plugin.h
src/sdl_display/: CMakeLists.txt  plugin_main.cpp
src/waveshare_7in5/: CMakeLists.txt  GUI_BMPfile.h  main.c
